tests/tslib_syntax/tslib_syntax.exp
Error --------------------------------------------------------------------------------------- declare_var_extras.js:24:1

Cannot cast `s` to string literal `bar` because string literal `foo` [1] is incompatible with string literal `bar` [2].
[incompatible-type]

   declare_var_extras.js:24:1
   24| s as 'bar'; // ERROR - 'foo' !== 'bar'
       ^

References:
   declare_var_extras.js:2:19
    2| declare const s = 'foo';
                         ^^^^^ [1]
   declare_var_extras.js:24:6
   24| s as 'bar'; // ERROR - 'foo' !== 'bar'
            ^^^^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:25:1

Cannot cast `n` to number literal `20` because number literal `10` [1] is incompatible with number literal `20` [2].
[incompatible-type]

   declare_var_extras.js:25:1
   25| n as 20; // ERROR - 10 !== 20
       ^

References:
   declare_var_extras.js:3:19
    3| declare const n = 10;
                         ^^ [1]
   declare_var_extras.js:25:6
   25| n as 20; // ERROR - 10 !== 20
            ^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:26:1

Cannot cast `bi` to bigint literal `200n` because bigint literal `100n` [1] is incompatible with bigint literal
`200n` [2]. [incompatible-type]

   declare_var_extras.js:26:1
   26| bi as 200n; // ERROR - 100n !== 200n
       ^^

References:
   declare_var_extras.js:5:20
    5| declare const bi = 100n;
                          ^^^^ [1]
   declare_var_extras.js:26:7
   26| bi as 200n; // ERROR - 100n !== 200n
             ^^^^ [2]


Error -------------------------------------------------------------------------------------- declare_var_extras.js:30:27

`declare` variable declarations cannot have both a type annotation and an initializer. [unsupported-syntax]

   30| declare const e: string = 'hello'; // ERROR
                                 ^^^^^^^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:33:19

Initializer in a `declare` variable must be a literal (string, number, bigint, or boolean). [unsupported-syntax]

   33| declare const f = 1 + 2; // ERROR
                         ^^^^^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:36:15

`declare` variable declarations require a type annotation or a literal initializer. [unsupported-syntax]

   36| declare const h; // ERROR
                     ^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:39:15

Destructuring is not supported in `declare` variable declarations. [unsupported-syntax]

   39| declare const [g] = 'foo'; // ERROR
                     ^^^


Error ---------------------------------------------------------------------------------- optional_class_property.js:10:1

Cannot cast `foo.a` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   optional_class_property.js:10:1
   10| foo.a as empty; // ERROR
       ^^^^^

References:
   optional_class_property.js:2:7
    2|   a?: string;
             ^^^^^^ [1]
   optional_class_property.js:10:10
   10| foo.a as empty; // ERROR
                ^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional_class_property.js:10:1

Cannot cast `foo.a` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   optional_class_property.js:10:1
   10| foo.a as empty; // ERROR
       ^^^^^

References:
   optional_class_property.js:2:7
    2|   a?: string;
             ^^^^^^ [1]
   optional_class_property.js:10:10
   10| foo.a as empty; // ERROR
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- unique_symbol.js:7:1

Cannot cast `x` to empty because symbol [1] is incompatible with empty [2]. [incompatible-type]

   unique_symbol.js:7:1
   7| x as empty; // ERROR
      ^

References:
   unique_symbol.js:1:18
   1| declare const x: unique symbol;
                       ^^^^^^^^^^^^^ [1]
   unique_symbol.js:7:6
   7| x as empty; // ERROR
           ^^^^^ [2]



Found 10 errors
